# rofi-yt

./: CMakeLists.txt  Makefile  README.md
src/: fetcher.c  parser.c  utils.c  yt.c
src/yt/: fetcher.h  parser.h  utils.h
theme/: yt.rasi
